--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <header>
             <div class="logo-wrapper">
-                <img src="img/logo.svg" alt="logo">
+                <img src="./img/logo.svg" alt="logo">
             </div>
 
             <nav class="main-navigation">
@@ -40,7 +40,7 @@
                 <button class="sign-up-button">Sign up</button>
             </div>
             <div class="first-image-wrapper">
-                <img class="pink-image" src="img/graphic.jpg" alt="decoration">
+                <img class="pink-image" src="./img/graphic.jpg" alt="decoration">
             </div>
         </div>
 
@@ -51,11 +51,11 @@
 
         <div class="third-section">
             <ul class="logo-list">
-                <li class="logo-list-item"> <img src="img/boomerang.svg" alt="logo"></li>
-                <li class="logo-list-item"> <img src="img/2.svg" alt="logo"></li>
-                <li class="logo-list-item"> <img src="img/3.svg" alt="logo"></li>
-                <li class="logo-list-item"> <img src="img/4.svg" alt="logo"></li>
-                <li class="logo-list-item"> <img src="img/5.svg" alt="logo"></li>
+                <li class="logo-list-item"> <img src="./img/boomerang.svg" alt="logo"></li>
+                <li class="logo-list-item"> <img src="./img/2.svg" alt="logo"></li>
+                <li class="logo-list-item"> <img src="./img/3.svg" alt="logo"></li>
+                <li class="logo-list-item"> <img src="./img/4.svg" alt="logo"></li>
+                <li class="logo-list-item"> <img src="./img/5.svg" alt="logo"></li>
             </ul>
         </div>
 
@@ -66,7 +66,7 @@
             <div class="inner-section-wrapper">
                 <div class="inner-section">
                     <div class="image-wrapper">
-                        <img class="inner-section-image" src="img/Rectangle 5.jpg" alt="human">
+                        <img class="inner-section-image" src="./img/Rectangle 5.jpg" alt="human">
                     </div>
                     <div class="info-wrapper">
                         <span class="series">Gloop series</span>
@@ -80,7 +80,7 @@
 
                 <div class="inner-section">
                     <div class="image-wrapper">
-                        <img class="inner-section-image" src="img/Rectangle 5 (1).jpg" alt="human">
+                        <img class="inner-section-image" src="./img/Rectangle 5 (1).jpg" alt="human">
                     </div>
                     <div class="info-wrapper">
                         <span class="series">Gloop series</span>
@@ -94,7 +94,7 @@
 
                 <div class="inner-section">
                     <div class="image-wrapper">
-                        <img class="inner-section-image" src="img/Rectangle 5 (2).jpg" alt="human">
+                        <img class="inner-section-image" src="./img/Rectangle 5 (2).jpg" alt="human">
                     </div>
                     <div class="info-wrapper">
                         <span class="series">Gloop series</span>
@@ -108,7 +108,7 @@
 
                 <div class="inner-section">
                     <div class="image-wrapper">
-                        <img class="inner-section-image" src="img/Rectangle 5 (3).jpg" alt="human">
+                        <img class="inner-section-image" src="./img/Rectangle 5 (3).jpg" alt="human">
                     </div>
                     <div class="info-wrapper">
                         <span class="series">Gloop series</span>
@@ -131,7 +131,7 @@
                 <button class="sign-up-button">Sign up</button>
             </div>
             <div class="fifth-image-wrapper">
-                <img src="img/zalia moteris.jpg" alt="decoration">
+                <img src="./img/zalia moteris.jpg" alt="decoration">
             </div>
         </div>
 
@@ -139,17 +139,17 @@
         <footer class="footer-container">
             <div class="footer-top">
                 <div class="logo-wrapper">
-                    <img src="img/logo.svg" alt="Logo" class="footer-logo">
+                    <img src="./img/logo.svg" alt="Logo" class="footer-logo">
                     <p class="footer-description">Exclusive NFT Collection </p>
                     <ul class="icons-list">
                         <li class="icon"><a class="icon-link" href="https://www.facebook.com/" target="_blank"> <img
-                                    src="img/facebook.svg" alt="facebook" width="18"></a> </li>
+                                    src="./img/facebook.svg" alt="facebook" width="18"></a> </li>
                         <li class="icon"><a class="icon-link" href="https://twitter.com/" target="_blank"><img
-                                    src="img/twitter.svg" alt="twitter" width="18"></a></li>
+                                    src="./img/twitter.svg" alt="twitter" width="18"></a></li>
                         <li class="icon"><a class="icon-link" href="https://www.instagram.com/" target="_blank"><img
-                                    src="img/instagram.svg" alt="instagram" width="18"></a></li>
+                                    src="./img/instagram.svg" alt="instagram" width="18"></a></li>
                         <li class="icon"><a class="icon-link" href="https://www.tiktok.com/" target="_blank"> <img
-                                    src="img/tiktok.svg" alt="linkedin" width="18"></a> </li>
+                                    src="./img/tiktok.svg" alt="linkedin" width="18"></a> </li>
                     </ul>
                 </div>
 
